<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/edt_username"
        style="@style/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName|textAutoComplete"
        android:autofillHints="@string/username"
        android:drawableStart="@drawable/ic_person"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/edt_email"
        style="@style/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_email"
        android:inputType="textEmailAddress|textAutoComplete"
        android:autofillHints="@string/email"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/edt_password"
        style="@style/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/password"
        android:drawableStart="@drawable/ic_password"
        android:hint="@string/password"
        android:inputType="textPassword|textAutoComplete"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_register"
        style="@style/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAllCaps="true"
        android:backgroundTint="@color/blue"
        android:textStyle="bold"
        android:text="@string/register"/>
</LinearLayout>
