<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.note.HomeActivity">

    <ImageView
        android:id="@+id/iv_note"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/note"
        android:contentDescription="@string/image_note"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_below="@id/iv_note"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="21dp"
        android:layout_centerHorizontal="true"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_welcome"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/progress_bar"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/red"
        android:textColor="@android:color/white"/>
</RelativeLayout>
